# printf_hello

./: Makefile.in  README.md  configure.ac  hello.c  hello.h  main.c
RPM/: RAIDIX_print-1.0-1.el8.x86_64.rpm
SPEC/: RAIDIX_print.spec
